--- a/ForNurseCom/appsettings.json
+++ b/ForNurseCom/appsettings.json
@@ -18,6 +18,16 @@
     "ExistingApiUrl": "https://api.kbu.cloud/smart/source/auth.php"
   },
 
+"Kestrel": {
+  "Endpoints": {
+    "Http": {
+      "Url": "http://0.0.0.0:5000"
+    },
+    "Https": {
+      "Url": "https://0.0.0.0:5001"
+    }
+  }
+},
 
 
 
