update launcon settings

--- a/ForNurseCom/Properties/launchSettings.json
+++ b/ForNurseCom/Properties/launchSettings.json
@@ -37,6 +37,16 @@
       },
       "publishAllPorts": true,
       "useSSL": false
+    },
+    "Production": {
+      "commandName": "Project",
+      "launchBrowser": false,
+      "launchUrl": "swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://0.0.0.0:443;http://0.0.0.0:80"
     }
   },
   "$schema": "https://json.schemastore.org/launchsettings.json",
